--- a/public/css/app.css
+++ b/public/css/app.css
@@ -665,6 +665,9 @@ video {
 .table-auto {
   table-layout: auto;
 }
+.cursor-pointer {
+  cursor: pointer;
+}
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
